Update cursor library and UI

--- a/extensions/cursor-extension/locales/en.default.json
+++ b/extensions/cursor-extension/locales/en.default.json
@@ -1,6 +1,6 @@
 {
   "cursor": {
-    "name": "FourCore Cursor",
+    "name": "FourCore Custom Cursor",
     "enable": "Enable custom cursor",
     "excludeSelector": "Exclude selector (optional)"
   }
